ajout exos 01_if

--- a/Cours/01_03_if.md
+++ b/Cours/01_03_if.md
@@ -23,4 +23,34 @@ Eventuellement, il pourrait être intéressant d'avoir 3 cas :
 La solution consisterait à imbriquer des *if* ou a utiliser *elif* (cherchez sur le net, on le verra en cours mais je ne vais pas surcharger ce support)
 
 #### Exercices
-TODO
+Vous **devez** être en mesure de faire les exercices suivants :
+
+1. faites un programme qui demande à l'utilisateur un entier *a* et affiche un message adapté si l'on est dans l'un des deux cas suivants
+
+   - a < 10
+
+   - a >= 10
+
+2. faites un programme qui demande à l'utilisateur son nom *nom* et affiche :
+
+  - "Bienvenue mr page" si le nom est "page"
+
+  - "Sortez d'ici" dans les autres cas
+
+3. faites un programme qui demande à l'utilisateur un entier *a* et affiche un message adapté si l'on est dans l'un des trois cas suivants
+
+      - a = 10
+
+      - a < 10
+
+      - a > 10
+
+4. faites un programme qui demande à l'utilisateur un entier *a* et affiche un message adapté si l'on est dans l'un des 4 cas suivants
+
+      - a <= -3
+
+      - -3 < a < 0
+
+      - 0 < a < 2
+
+      - 2 <= a
