--- a/Cours/05_02_CC1.md
+++ b/Cours/05_02_CC1.md
@@ -1,4 +1,4 @@
 #### CC1
 
-La suite du cours a été consacrée au premier Controle continu.
+La suite du cours a été consacrée au premier Contrôle continu.
 Le sujet est disponible dans les [annales](../Annales/)
